Done Add Loading Animation

--- a/assets/scss/components/citadel/loading/_loading.scss
+++ b/assets/scss/components/citadel/loading/_loading.scss
@@ -7,7 +7,44 @@
 // -----------------------------------------------------------------------------
 
 .loadingOverlay {
-    background-color: rgba(stencilColor("loadingOverlay-backgroundColor"), 0.9);
-    display: none;
-    z-index: zIndex("low");
+    @include pos($pos: abs, $cb: center);
+    height: 4px;
+    display: block;
+    background-color: rgba(203, 160, 82, 0.05);
+    border-radius: 2px;
+    overflow: hidden;
+    width: 150px;
+
+    &::before {
+        content: unset;
+    }
+
+    .loader-progress {
+        background-color: $color-custom-yellow;
+
+        &::before {
+            content: "";
+            position: absolute;
+            background-color: inherit;
+            top: 0;
+            left: -35%;
+            width: 100%;
+            bottom: 0;
+            will-change: transform;
+            animation: indeterminate 2.1s cubic-bezier(.65,.815,.735,.395) infinite;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            background-color: inherit;
+            top: 0;
+            left: -200%;
+            width: 100%;
+            bottom: 0;
+            will-change: transform;
+            animation: indeterminate-short 2.1s cubic-bezier(.165,.84,.44,1) infinite;
+            animation-delay: 1.15s;
+        }
+    }
 }
