--- a/templates/components/custom/custom-before-quick-results.html
+++ b/templates/components/custom/custom-before-quick-results.html
@@ -48,7 +48,7 @@
             {{#if theme_settings.beforeQuickSearch-popular-title}}
                 <h3 class="quickResults-title">{{theme_settings.beforeQuickSearch-popular-title}}</h3>
             {{/if}}
-            <div class="loadingOverlay"></div>
+            <div class="loadingOverlay"><div class="loader-progress"></div></div>
             <ul class="productGrid"></ul>
         </div>
     {{/if}}
