--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -362,5 +362,5 @@
 <div id="previewModal" class="modal modal--large" data-reveal>
     {{> components/common/modal/modal-close-btn }}
     <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="modal-header-title"></div>
-    <div class="loadingOverlay"></div>
+    <div class="loadingOverlay"><div class="loader-progress"></div></div>
 </div>
