--- a/templates/pages/cart.html
+++ b/templates/pages/cart.html
@@ -11,7 +11,7 @@ cart: true
                 {{> components/cart/status-messages}}
             </div>
             {{#if cart.items.length}}
-                <div class="loadingOverlay"></div>
+                <div class="loadingOverlay"><div class="loader-progress"></div></div>
                 <div class="cart-content-wrapper">
                     <div data-cart-content class="cart-content-item">
                         {{> components/cart/content}}
